@@ -1,5 +1,13 @@
 Version 2.1.5, released ????
 
+Randoop now tracks types independently of the Java reflection classes. This
+means for generic classes it will select a type argument for each type parameter
+and use that selection consistently. This will avoid compile and run time type
+errors related to inconsistent use of a parameterized type.
+
+Fixes a bug where the opening parenthesis was not being generated for a call to
+the constructor of a non-static inner class.
+
 The following command-line arguments have been removed: -output-tests-serialized,
 --componentfile-ser, --componentfile-txt, --output-components
 
